--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -3,6 +3,8 @@ version: '3'
 vars:
   PROJECT_NAME: SFDaaS
   TOMCAT_PORT: 8080
+  M2_REPO: './.m2/repository'
+  MVN_FLAGS: '-Dmaven.repo.local={{.M2_REPO}}'
 
 tasks:
   default:
@@ -18,6 +20,7 @@ tasks:
       - echo "WAR File{{":"}} target/{{.PROJECT_NAME}}.war"
       - echo "App URL{{":"}} http{{":"}}//localhost{{":"}}{{.TOMCAT_PORT}}/{{.PROJECT_NAME}}"
       - echo "Data Path{{":"}} {{.USER_WORKING_DIR}}/data"
+      - echo "M2 Repository{{":"}} {{.M2_REPO}}"
       - echo ""
       - echo "Java Version{{":"}}"
       - java -version
@@ -36,7 +39,7 @@ tasks:
       - echo "Validating data directory..."
       - test -d data && echo "✓ Data directory exists" || echo "✗ Data directory missing"
       - echo "Validating pom.xml..."
-      - mvn validate
+      - mvn {{.MVN_FLAGS}} validate
       - echo "✓ Project setup is valid"
     silent: true
 
@@ -44,7 +47,7 @@ tasks:
     desc: Clean build artifacts
     cmds:
       - echo "Cleaning build artifacts..."
-      - mvn clean
+      - mvn {{.MVN_FLAGS}} clean
       - echo "✓ Clean complete"
     silent: true
 
@@ -53,7 +56,7 @@ tasks:
     deps: [clean]
     cmds:
       - echo "Compiling source code..."
-      - mvn compile
+      - mvn {{.MVN_FLAGS}} compile
       - echo "✓ Compilation complete"
     silent: true
 
@@ -61,7 +64,7 @@ tasks:
     desc: Run tests (if any)
     cmds:
       - echo "Running tests..."
-      - mvn test
+      - mvn {{.MVN_FLAGS}} test
       - echo "✓ Tests complete"
     silent: true
 
@@ -70,7 +73,7 @@ tasks:
     deps: [clean]
     cmds:
       - echo "Building WAR package..."
-      - mvn package
+      - mvn {{.MVN_FLAGS}} package
       - echo "✓ WAR file created at target/{{.PROJECT_NAME}}.war"
       - ls -lh target/{{.PROJECT_NAME}}.war
     silent: true
@@ -86,7 +89,7 @@ tasks:
     desc: Install to local Maven repository
     cmds:
       - echo "Installing to local Maven repository..."
-      - mvn clean install
+      - mvn {{.MVN_FLAGS}} clean install
       - echo "✓ Installation complete"
     silent: true
 
@@ -94,16 +97,17 @@ tasks:
     desc: Run application in background
     deps:
       - stop
+      - clean
       - setup
       - build
     cmds:
-      - echo "Starting embedded Tomcat in background on port {{.TOMCAT_PORT}}..."
-      - nohup mvn tomcat7:run -Dmaven.tomcat.port={{.TOMCAT_PORT}} > tomcat.log 2>&1 &
+      - echo; echo "Starting embedded Tomcat in background on port {{.TOMCAT_PORT}}...";echo
+      - nohup mvn {{.MVN_FLAGS}} tomcat7:run -Dmaven.tomcat.port={{.TOMCAT_PORT}} > tomcat.log 2>&1 &
       - echo $! > tomcat.pid
       - sleep 5
       - echo "✓ Tomcat started in background (PID{{":"}} $(cat tomcat.pid))"
       - echo "Log file{{":"}} tomcat.log";
-      - echo "PID file{{":"}} tomcat.pid"; echo      
+      - echo "PID file{{":"}} tomcat.pid"; echo
       - echo "Visit http://localhost:{{.TOMCAT_PORT}}/{{.PROJECT_NAME}}/orekit/propagate/usage"; echo
     silent: true
 
@@ -155,20 +159,39 @@ tasks:
     desc: Display dependency tree
     cmds:
       - echo "Dependency tree{{":"}}"
-      - mvn dependency:tree
+      - mvn {{.MVN_FLAGS}} dependency:tree
 
   deps-analyze:
     desc: Analyze dependencies for issues
     cmds:
       - echo "Analyzing dependencies..."
-      - mvn dependency:analyze
+      - mvn {{.MVN_FLAGS}} dependency:analyze
     silent: true
 
   deps-update:
     desc: Check for dependency updates
     cmds:
       - echo "Checking for dependency updates..."
-      - mvn versions:display-dependency-updates
+      - mvn {{.MVN_FLAGS}} versions:display-dependency-updates
+    silent: true
+
+  deps-location:
+    desc: Show where dependencies are stored in M2 repository
+    cmds:
+      - echo "Maven Local Repository{{":"}} {{.M2_REPO}}"
+      - echo ""
+      - echo "Project Dependencies Location{{":"}}"
+      - echo "  OreKit{{":"}} {{.M2_REPO}}/org/orekit/orekit/13.1.2/"
+      - echo "  Hipparchus Core{{":"}} {{.M2_REPO}}/org/hipparchus/hipparchus-core/4.0.2/"
+      - echo "  Spymemcached{{":"}} {{.M2_REPO}}/net/spy/spymemcached/2.12.3/"
+      - echo ""
+      - echo "Checking if dependencies exist{{":"}}"
+      - test -d {{.M2_REPO}}/org/orekit/orekit/13.1.2 && echo "  ✓ OreKit 13.1.2" || echo "  ✗ OreKit 13.1.2 not found"
+      - test -d {{.M2_REPO}}/org/hipparchus/hipparchus-core/4.0.2 && echo "  ✓ Hipparchus 4.0.2" || echo "  ✗ Hipparchus 4.0.2 not found"
+      - test -d {{.M2_REPO}}/net/spy/spymemcached/2.12.3 && echo "  ✓ Spymemcached 2.12.3" || echo "  ✗ Spymemcached 2.12.3 not found"
+      - echo ""
+      - echo "Repository size{{":"}}"
+      - du -sh {{.M2_REPO}} 2>/dev/null || echo "  Unable to calculate size"
     silent: true
 
   verify:
@@ -230,7 +253,7 @@ tasks:
       - mkdir -p src-main
       - echo ""
       - echo "Downloading dependencies..."
-      - mvn dependency:resolve
+      - mvn {{.MVN_FLAGS}} dependency:resolve
       - echo ""
       - echo "✓ Setup complete!"
       - echo ""
@@ -248,7 +271,7 @@ tasks:
       - task: verify
       - echo ""
       - echo "Generating documentation..."
-      - mvn javadoc:javadoc || echo "Javadoc generation skipped"
+      - mvn {{.MVN_FLAGS}} javadoc:javadoc || echo "Javadoc generation skipped"
       - echo ""
       - echo "✓ Release build complete!"
       - echo ""
