minor update to README.md, Taskfile correction and removal of unneeded servlets/OreKitPropogate.java

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -133,7 +133,7 @@ tasks:
       - echo "Log file{{":"}} server.log";
       - echo "PID file{{":"}} server.pid"; echo
       - echo "Visit http://localhost:{{.SERVER_PORT}}/{{.PROJECT_NAME}}/orekit/propagate/usage"; echo " or "
-      - echo "Visit http://localhost:8080/SFDaaS/orekit/propagate?t0=2010-05-28T12:00:00.000&tf=2010-05-29T12:00:00.000&r0=[3198022.67,2901879.73,5142928.95]&v0=[-6129.640631,4489.647187,1284.511245]"
+      - echo "Visit http://localhost:{{.SERVER_PORT}}/{{.PROJECT_NAME}}/orekit/propagate?t0=2010-05-28T12:00:00.000&tf=2010-05-29T12:00:00.000&r0=[3198022.67,2901879.73,5142928.95]&v0=[-6129.640631,4489.647187,1284.511245]"
     silent: true
 
   stop:
